--- a/Conf/sys.conf
+++ b/Conf/sys.conf
@@ -4,8 +4,11 @@ SystemToMail = true
 #发出邮箱的名称
 MailName = YGG网站
 #发出邮箱的地址
-MailUserName = test@kd315.com 
+MailUserName = 2279834998@qq.com
 #发出邮箱发出服务嚣
-MailHost = smtp.exmail.qq.com 
+MailHost = smtp.qq.com
 #发出邮箱的密码
-MailPassword = Abc315
+MailPassword = tcennjwakxlmdifc
+#系统名称
+SystemName = 正迪智能云平台
+
