--- a/Conf/sys.conf
+++ b/Conf/sys.conf
@@ -2,7 +2,7 @@
 #系统是否自动发送邮件
 SystemToMail = true
 #发出邮箱的名称
-MailName = YGG网站
+MailName = YGG_EMAIL
 #发出邮箱的地址
 MailUserName = 2279834998@qq.com
 #发出邮箱发出服务嚣
@@ -10,5 +10,5 @@ MailHost = smtp.qq.com
 #发出邮箱的密码
 MailPassword = tcennjwakxlmdifc
 #系统名称
-SystemName = YGG智能云平台
+SystemName = YGG_WEBSITE
 
